--- a/OrangeTutorial/www.OrangeTutorial.com/index.html
+++ b/OrangeTutorial/www.OrangeTutorial.com/index.html
@@ -1,84 +1,132 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-	
+		<title>Orange Tutorials</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<meta charset="utf-8"/>
 	</head>
 
 	<body>
+		<div class="navigation-bar">
+				<a href="#subjects">SUBJECT</a>
+				<a href="#about">ABOUT</a>
+				<a href="#contact">CONTACT</a>
+		</div>
+
+		<div class="subjects-section" id="subjects">
+			<h2>SUBJECTS</h2>
+			<div class=image>
+					<img src="images/css.png" alt="css turorial"/>
+					<img src="images/html.png" alt="css turorial"/>
+					<img src="images/js.png" alt="css turorial"/>
+			</div>
+		</div>
+
 		<div id="js">
 			<h1>JavaScript</h1>
 			<h2>Employing Objects</h2>
-			
+
 			<h3>Creating an Object</h3>
 			<p>
-			
+
 			</p>
 			<ol>
-			
+
 			</ol>
 			<br/>
-			
+
 			<h3>Extending an Object</h3>
 			<p>
-			
+
 			</p>
 			<ol>
-			
+
 			</ol>
 			<br/>
-			
+
 			<h3>Creating an Array Object</h3>
 			<p>
-			
+
 			</p>
 			<ol>
-			
+
 			</ol>
 			<br/>
-			
+
 			<h3>Looping through Elements</h3>
 			<p>
-			
+
 			</p>
 			<ol>
-			
+
 			</ol>
 			<br/>
-			
+
 			<h3>Adding Array Elements</h3>
 			<p>
-			
+
 			</p>
 			<ol>
-			
+
 			</ol>
 			<br/>
-			
+
 			<h3>Joining and Slicing Arrays</h3>
 			<p>
-			
+
 			</p>
 			<ol>
-			
+
 			</ol>
 			<br/>
-			
+
 			<h3>Sorting Array Elements</h3>
 			<p>
-			
+
 			</p>
 			<ol>
-			
+
 			</ol>
 			<br/>
-			
+
 			<h3>Catching Exceptions</h3>
 			<p>
-			
+
 			</p>
 			<ol>
-			
+
 			</ol>
 		</div>
+
+		<div class="css tutorials section">
+
+		</div>
+
+		<div class="about-section" id="about">
+			<h2>About Us</h2>
+			<p>Orange Website is an interactive Website application that helps the users to learn and at the
+			<p>same time have fun in learning one topic each from Hypertext Markup Language (HTML),
+			<p>Cascading Style Sheets (CSS) and JavaScript (JS). OrangeTutorial provide good learning
+			<p>materials and quizzes. It also provide examples and trivia for the users.
+		</div>
+
+		<div class="contact-section" id="contact">
+				<span>Contact Us</span>
+				<div class="inputs">
+						<textarea rows="10" class="inpt-msg" cols="40" placeholder="comments"></textarea>
+						<input type="button" class="inp-btn" value="Submit">
+				</div>
+		</div>
+		<footer>
+        <div class="footer">
+            <p>OrangeTutorials&copy; 2018-19<br>
+                OrangeTutorial@slu.edu.ph<br
+                Baguio City, Philippines<br>
+                0985496325<br>
+            </p>
+						<p>FB, pinterest, insta image png. needed
+        </div>
+    </footer>
 	</body>
+
 </html>
