--- a/OrangeTutorial/www.OrangeTutorial.com/index.html
+++ b/OrangeTutorial/www.OrangeTutorial.com/index.html
@@ -17,12 +17,16 @@
 			<h2>SUBJECTS</h2>
 			<div class=image>
 					<img src="images/css.png" alt="css turorial"/>
-					<img src="images/html.png" alt="css turorial"/>
-					<img src="images/js.png" alt="css turorial"/>
+					<img src="images/html.png" alt="html turorial"/>
+					<img src="images/js.png" alt="js turorial"/>
 			</div>
 		</div>
 
-		<div id="js">
+		<div class="topic" id="css">
+
+		</div>
+		
+		<div class="topic" id="js">
 			<h1>JavaScript</h1>
 			<h2>Employing Objects</h2>
 
@@ -96,10 +100,6 @@
 			<ol>
 
 			</ol>
-		</div>
-
-		<div class="css tutorials section">
-
 		</div>
 
 		<div class="about-section" id="about">
