--- a/OrangeTutorial/www.OrangeTutorial.com/index.html
+++ b/OrangeTutorial/www.OrangeTutorial.com/index.html
@@ -16,7 +16,19 @@
 		<div class="subjects-section" id="subjects">
 			<h2>SUBJECTS</h2>
 			<div class="image">
-					<img src="images/css.png" alt="css turorial"/>
+				<a href="css.html">
+					<img src="images/css.png" alt="css tutorial"/>
+				</a>
+			</div>
+			<div class="image">
+					<img src="images/html.png" alt="html tutorial"/>
+			</div>
+			<div class="image">
+				<a href="js.html">
+					<img src="images/js.png" alt="js tutorial"/>
+				</a>
+			</div>
+		</div>
 
 		<div class="about-section" id="about">
 			<h2>About Us</h2>
