Edited "Extending an Object" JS subtopic

--- a/OrangeTutorial/www.OrangeTutorial.com/js.html
+++ b/OrangeTutorial/www.OrangeTutorial.com/js.html
@@ -142,7 +142,7 @@
 				<p>
 				There you go! Here is a cute mushroom with the properties above.
 				</p>
-				<!--Insert Editable Mushroom Image Here-->
+				<!--Insert Mushroom Image Here-->
 			</section>	
 				
 			<br/><br/>
