--- a/OrangeTutorial/www.OrangeTutorial.com/js.html
+++ b/OrangeTutorial/www.OrangeTutorial.com/js.html
@@ -99,11 +99,11 @@
 	<br/><br/>
 			
 	<h2>Objects</h2>
-			
 	<section>
 		<p>
 			Object is an entity with properties (variables or constants) that store data and
 			methods (functions) that perform tasks.
+			In this topic, we are going to create a JavaScript file named "Fungus.js".
 		</p>
 		<h3>Types of Objects</h3>
 		<ul><dl>
