--- a/OrangeTutorial/www.OrangeTutorial.com/js.html
+++ b/OrangeTutorial/www.OrangeTutorial.com/js.html
@@ -4,6 +4,7 @@
 <head>
     <title>Orange JS Tutorial</title>
     <link rel="stylesheet" type="text/css" href="styles/css.css">
+    <meta charset="utf-8"/>
     <script src="js/jquery-3.3.1.js"></script>
     <script>
     	$(document).ready(function(){
