Edited div.nav for JS topic

--- a/OrangeTutorial/www.OrangeTutorial.com/js.html
+++ b/OrangeTutorial/www.OrangeTutorial.com/js.html
@@ -66,14 +66,11 @@
 
 <div class="nav">
     <a class="a active" href="#">Home</a>
-    <a class="b" href="#">HTML</a>
-    <a class="c" href="#">HTML Document Structure</a>
-    <a class="d" href="#">HTML Document Components</a>
-    <a class="e" href="#">HTTP</a>
-    <a class="f" href="#">HTTP Fundamentals</a>
-    <a class="g" href="#">Resource Addressing</a>
-    <a class="h" href="#">HTTP Request Messages</a>
-    <a class="i" href="#">HTTP Request Messages</a>
+    <a class="b" href="#">JS</a>
+    <a class="c" href="#">Topic: Employing Objects</a>
+    <a class="d" href="#">Creating an Object</a>
+    <a class="e" href="#">Extending an Object</a>
+    <a class="f" href="#">Creating an Array Objects</a>
 </div>
 	
 <div class="topic" id="js">
@@ -99,7 +96,7 @@
 			
 	<br/><br/>
 			
-	<h2>Objects</h2>
+	<h2>Employing Objects</h2>
 	<section>
 		<p>
 			Object is an entity with properties (variables or constants) that store data and
