--- a/OrangeTutorial/www.OrangeTutorial.com/html.html
+++ b/OrangeTutorial/www.OrangeTutorial.com/html.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Orange HTML Tutorial</title>
-    <link rel="stylesheet" type="text/css" href="styles/css.css">
+    <link rel="stylesheet" type="text/css" href="styles/html.css">
     <script src="js/jquery-3.3.1.js"></script>
     <script>
 	$(document).ready(function(){
@@ -83,7 +83,7 @@
 	   story about html? yes there is, in this story you will learn the versions of html and even the history of browsers.
 	   Moreover, the story will tell the you the heroes who created the html to internet. Be thankful becuase they are still
 	   alive. You coud actually email them and chat with them.<br>
-	   The story starts with the man named Tim Berners-Lee, when he invented the World Wibe Web. Tim then created html as 
+	   The story starts with the man named Tim Berners-Lee, when he invented the World Wibe Web. Tim then created html as
        the langauge for the web content. The document langauge is called html tags. During that time the very first browser
        was release named Mosaic Browser. After a year, Large companies is starting to develop thier browser and even underestimated
        the importance of the web.Years after, a much stable version of html was release and during that period a new Browser emerged
@@ -103,12 +103,12 @@
        <p>
          -version information (i.e. DOCTYPE) refers to a Document Type Definition (DTD) and it is based
          on a rules which is the Standard Generalized Markup Language for the browsers to correct the content.<br><br>
-         Root element (html)   
+         Root element (html)
          A header segment containing archive metadata delimited by the head component. <br><br>
          A HTML document has two parts: <br><br>
          Head - a component that contains a title and a metadata of the web documents.<br><br>
          Body - a component contains the data that you need to show on a website page.<br><br>
-         In HTML5, the tag frameset <frameset> is not supported. <br> 
+         In HTML5, the tag frameset <frameset> is not supported. <br>
         <br><h3>Syntax</h3>
          &lt;html&gt;<br><br>
          &emsp;&lt;head&gt;<br>
@@ -123,7 +123,7 @@
 
 	 <div class="colors">
 	   HTML 4.01 DOCTYPE<br><br>
-       HTML 4.01 Strict Document Type Definition (DTD)<br> 
+       HTML 4.01 Strict Document Type Definition (DTD)<br>
        Strict Document Type Definition excludes the elements and attributes that W3C expects
        to remove permanently as support for style sheets.<br>
        HTML 4.01 Transitional<br>
