--- a/OrangeTutorial/www.OrangeTutorial.com/js.html
+++ b/OrangeTutorial/www.OrangeTutorial.com/js.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Orange JS Tutorial</title>
-    <link rel="stylesheet" type="text/css" href="styles/css.css">
+    <link rel="stylesheet" type="text/css" href="styles/html.css">
     <meta charset="utf-8"/>
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/js.js"></script>
@@ -19,7 +19,7 @@
     <a class="e" href="#">Extending an Object</a>
     <a class="f" href="#">Creating an Array Objects</a>
 </div>
-	
+
 <div class="topic" id="js">
 	<h1>JS: JavaScript</h1>
 	<p>
@@ -40,9 +40,9 @@
 	<pre>  //insert executable code here</pre>
 	<pre>}</pre>
 	<pre>document.addEventListener( "DOMContentLoaded", init, false );</pre>
-			
+
 	<br/><br/>
-			
+
 	<h2>Objects</h2>
 	<section>
 		<p>
@@ -60,9 +60,9 @@
 			<dd>- customized objects made by the author for storing data and providing functionalities</dd>
 		</ul></dl>
 	</section>
-			
+
 	<br/><br/>
-			
+
 	<section>
 		<h3>Creating an Object</h3>
 		<p>
@@ -114,10 +114,10 @@
 			Send Message From Fungus
 		</button>
 		<!--Insert Mushroom Image Here With Message Producing Script Near It-->
-	</section>	
-				
+	</section>
+
 	<br/><br/>
-			
+
 	<section>
 		<h3>Extending an Object</h3>
 		<p>
@@ -165,12 +165,12 @@
 		</p>
 		<!--Insert Mushroom Image Here-->
 		<button>
-			
+
 		</button>
-	</section>	
-				
+	</section>
+
 	<br/><br/>
-			
+
 	<section>
 		<h3>Creating an Array Object</h3>
 		<p>
