--- a/OrangeTutorial/www.OrangeTutorial.com/css.html
+++ b/OrangeTutorial/www.OrangeTutorial.com/css.html
@@ -63,6 +63,13 @@
 
 <body background="images/background.jpg">
 
+  <div class="navbar">
+      <a href="index.html">HOME</a>
+      <a href="js.html">JavaScript</a>
+      <a href="css.html">CSS</a>
+      <a href="html.html">HTML</a>
+  </div>
+
 <div class="nav">
     <a class="a active" href="#">Home</a>
     <a class="b" href="#">CSS Introduction</a>
@@ -129,26 +136,4 @@
 </div>
 
 </body>
-
-<footer>
-    <div class="footer">
-        <p>OrangeTutorials&copy; 2018-19<br>
-            OrangeTutorial@slu.edu.ph<br>
-            Baguio City, Philippines<br>
-            0985496325<br>
-        </p>
-        <a href="https://mail.google.com">
-            <img src="images/gm.png" height="35" width="35" alt="gm logo"/>
-        </a>
-        <a href="https://www.facebook.com">
-            <img src="images/fb.png" height="35" width="35" alt="fb logo"/>
-        </a>
-        <a href="https://www.instagram.com">
-            <img src="images/ig.png" height="35" width="35" alt="ig logo"/>
-        </a>
-        <a href="https://www.pinterest.ph">
-            <img src="images/pin.png" height="35" width="35" alt="pinterest logo"/>
-        </a>
-    </div>
-</footer>
 </html>
